@@ -1,5 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX mpage-2.5.4-gcc4.patch 836 RMD160 a45ce0c152728451104aab6e906a3e3d569106d5 SHA1 5caff464923d99f6c04db28b50eb203fc7f874f2 SHA256 d6c80fc4ca9b1b1c165a0fcbf190dea499f5439dda91ca7f4584ef1c1c48b91f
 DIST mpage-2.5.4.tgz 93992 RMD160 87c58c4d243efe5790c0240b17130382e705fadc SHA1 5e734f8e4d5992fa79e358653c9f72a59fc530b2 SHA256 c5487b9e5e72da60808272ed4c3de50f9237f3c9f30dfd9000520af6fbfc9a8e
-EBUILD mpage-2.5.4.ebuild 815 RMD160 0d0119fcec834f1c09b6773dc55007ddb834eb90 SHA1 f6280b034584532b251d6afc2d4eb3045fabeac6 SHA256 68bf0852eb1eb4422afcd8033fee4c2098dd5860b4294a1f0c8323e02708f19f
-MISC ChangeLog 2601 RMD160 cd8b17372849effec574fea1393295ac767bbaa1 SHA1 c24720e759bc2cd1f1bd97b4864b0584a01e6686 SHA256 ef2285078e14c4859c4c473cbd1cbe45fd657f5bf030c31aa88995f013599c06
+EBUILD mpage-2.5.4.ebuild 856 RMD160 87af575821aa00d0bd06940dfdf5a6142257e214 SHA1 729ebd2d9a7fe4f3eba31c2e6f481a4305897a0e SHA256 1449db10303c603d1aac723454ae87203349c417a6e42ccf51ba8617225681f2
+MISC ChangeLog 2702 RMD160 ab028b112b3e004cc4602e99afae28e37f7f0852 SHA1 536f941def2474eae4dd353939d690b17125c14a SHA256 2564b3a51f33db700a4be08c883691ad81a8d66c9dfd1e91ac7c5d5fd8c4ad18
 MISC metadata.xml 236 RMD160 92f49f8275e75caf57b88a3172d5204eaa4e33ae SHA1 dd1a8550a514e55ab0ed6190ab4794bb090994f8 SHA256 56075995f83836ae824c7cb01931b98d6745f6d5a7764299c8262e801486b829
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAklalR0ACgkQKhnDs22gwa/GOQCfcfICAXSdBshPKt5DygN6/cIx
+iKEAnA2drycjjvQhdVukqrwhvGGspP7g
+=lLYR
+-----END PGP SIGNATURE-----
