@@ -1,4 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST o3read-0.0.4.tar.gz 21075 RMD160 c011a283fdc3ee6ff4c340519a4ef7f32c258f38 SHA1 aa8bcfc82b5327f3d86a35193c0a434e33107d09 SHA256 3704b448099d3396bec4cf503c298628c815703aae12bfcddbac4444bc786430
-EBUILD o3read-0.0.4.ebuild 591 RMD160 611324c3843282d9fe0252deccb4032dbb4f4aec SHA1 81e92fba8af4aba4588cdd8d65ac3f1606a62ae6 SHA256 90ed72f35a36d5bb7961e37205728788ffe2fe8cb016fcc0c4828076924bb5ec
-MISC ChangeLog 1490 RMD160 15f3f80dbe4085ecaad42a7aa134fda963341666 SHA1 f36a7ca3222d64c28b4d3289583eaf412630bc72 SHA256 b3dd0162c431d7931477a025cdb53537de26a68183475dba8992c2de823338b1
+EBUILD o3read-0.0.4.ebuild 756 RMD160 bbefd6ab525e266ec095fde1a246f64075b9a607 SHA1 dcf7e2100f03ee3843a05bec5c26fab370b8ed98 SHA256 e0ebd9929488d1769ba8aa6866acc51b233ea10eb69b1ac41d6b78afaea07a0e
+MISC ChangeLog 1640 RMD160 e7c0bfd2581927c595584d02bc5db2701df59dcd SHA1 278cec90618d4678c2de7837a190f133f77316ef SHA256 ae4b245889083c6af69258b92ef78f1faf162169edca6e83ec2b2e1b19a71c70
 MISC metadata.xml 234 RMD160 eba4806545de0d7dfd954fe889ac8e82f7be1484 SHA1 03dd609a4efde867c4b12eaae5eb5cc44f7ebd53 SHA256 5085e7eb7655a7c639d97404f04d8732cbf17e72688a61ecd2e0967ac2a5711d
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAklalF4ACgkQKhnDs22gwa9FUwCgz8rZ0YcUVlCTWdtayk1rNVxm
+IR0AnRuK2ExbQQWgjdVLdaJa+KfOw6qS
+=s18O
+-----END PGP SIGNATURE-----
