@@ -1,23 +1,30 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/o3read/o3read-0.0.4.ebuild,v 1.7 2008/10/18 15:06:48 nixnut Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/o3read/o3read-0.0.4.ebuild,v 1.8 2008/12/30 21:36:23 angelos Exp $
+
+inherit toolchain-funcs
 
 DESCRIPTION="Converts OpenOffice formats to text or HTML."
 HOMEPAGE="http://siag.nu/o3read/"
-SRC_URI="http://siag.nu/pub/o3read/${P}.tar.gz"
+SRC_URI="http://siag.nu/pub/${PN}/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="amd64 ppc x86"
-IUSE=""
+IUSE="test"
 
-DEPEND="app-arch/unzip"
+DEPEND="test? ( app-arch/unzip
+	www-client/lynx )"
 
 src_compile() {
-	emake || die
+	emake CC="$(tc-getCC)" CFLAGS="${CFLAGS}" || die "emake failed"
 }
 
 src_install() {
 	dobin o3read o3totxt o3tohtml utf8tolatin1
 	doman o3read.1 o3tohtml.1 o3totxt.1 utf8tolatin1.1
+}
+
+src_test() {
+	emake lytest || die "make lytest failed"
 }
